move rule to _variables

--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -38,6 +38,8 @@ $link-color-active: $accent-color;
 $link-color-hover: $accent-color;
 $link-color-visited: $accent-color;
 
+$reset-button-color: #efefef;
+
 $text-color: #333;
 $text-color-darker: #000;
 $text-color-lighter: #555;
