--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -47,6 +47,7 @@ $text-color-lightest: #999;
 
 /* MMI / PAGER (impact bubbles) */
 
+$mmi-NAcolor: #eee;
 $mmiI-color: #fff;
 $mmiII-color: #acd8e9;
 $mmiIII-color: #acd8e9;
