combine aftershocks forecast into a single ‘bubble’

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -7,6 +7,10 @@
     margin-top: 2.25rem;
   }
 
+  p {
+    max-width: 55rem;
+  }
+
   #updated {
     display: none;
     padding: 1rem var(--padding-gutter);
