add ‘loading’ class to body to hide selectPane

--- a/src/htdocs/css/_selectPane.scss
+++ b/src/htdocs/css/_selectPane.scss
@@ -24,7 +24,7 @@
   }
 }
 
-body:not(.mainshock) {
+body:not(.loading, .mainshock) {
   #plotsPane,
   #summaryPane {
     &:not(.hide) ~ #selectPane {
