use darker text for update time

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -12,10 +12,12 @@
   }
 
   #updated {
+    color: $text-color-darker;
     display: none;
     padding: 1rem var(--padding-gutter);
 
     &:before {
+      color: $text-color;
       content: 'Updated: ';
     }
   }
