--- a/src/htdocs/css/_mixins.scss
+++ b/src/htdocs/css/_mixins.scss
@@ -5,6 +5,7 @@
   border-radius: 50%;
   color: $accent-color;
   cursor: pointer;
+  font: bold 16px Tahoma, Verdana, sans-serif;
   height: 23px;
   line-height: 1.35;
   padding: 0;
