remove util folder

--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -1,6 +1,6 @@
 @use 'aftershocks';
+@use 'earthquakes';
 @use 'fieldnotes';
 @use 'mainshock';
 @use 'pager-exposures';
 @use 'shakemap-stations';
-@use 'util/earthquakes';
