--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -5,12 +5,10 @@
     margin-top: .25rem;
   }
 
-  h3 {
-    margin: 1.5rem 0 -.25rem;
-  }
-
-  .catalog {
-    margin-top: 1.25rem !important;
+  .aftershocks,
+  .foreshocks,
+  .historical {
+    margin-bottom: 1.75rem;
   }
 
   .dd {
