--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -1,8 +1,8 @@
 #plotsPane {
   height: 100%;
 
-  h2 + p {
-    margin-bottom: 2rem;
+  h3 {
+    margin: 1.625rem 0 1.25rem;
   }
 
   .content {
@@ -16,7 +16,7 @@
     order: 0;
 
     h2 {
-      margin-top: .25rem;
+      margin-top: 0;
     }
   }
 
