--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -24,7 +24,11 @@
 
   h2 {
     font-size: 1.75rem;
-    margin-top: 0;
+    margin: .25rem 0 1rem;
+  }
+
+  h3 {
+    margin: 1.5rem 0 .75rem;
   }
 
   label {
