--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -89,27 +89,31 @@ h5 {
   font-weight: 400;
 }
 h2,
+h3,
+h4 {
+  line-height: 1.25;
+}
+h2,
 h3 {
   align-items: baseline;
   display: flex;
 }
 h1 {
-  font-size: 2.1rem;
+  font-size: 1.75rem;
+  line-height: 1;
   margin: 0;
 }
 h2 {
   font-size: 2rem;
-  margin: 1.75rem 0 .25rem;
+  margin: 2.25rem 0 .625rem;
 }
 h3 {
   font-size: 1.5rem;
-  line-height: 1.4;
-  margin: 1rem 0;
+  margin: 2.25rem 0 1rem;
 }
 h4 {
   font-size: 1.25rem;
-  line-height: 1.4;
-  margin: 0 0 .25rem;
+  margin: 0 0 .5rem;
 }
 h5 {
   font-size: 1rem;
@@ -122,7 +126,7 @@ html {
 }
 
 p {
-  line-height: 1.6;
+  line-height: 1.625;
   margin: 1rem 0;
 
   > strong {
@@ -192,7 +196,7 @@ tr {
 .description {
   font-size: 1.125rem;
   line-height: 1.5;
-  margin: .5rem 0;
+  margin: 0;
 }
 
 .feature {
