--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -35,10 +35,8 @@
   }
 
   .required {
-    border-top: 1px solid $border-color-lighter;
     color: $invalid-color;
-    margin: 2rem 0 0;
-    padding-top: 4px;
+    margin-bottom: 0;
   }
 
   .swap {
