--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -59,6 +59,12 @@
     transition: right $sidebar-toggle-duration ease;
     z-index: 10000;
   }
+
+  .note {
+    border-top: 1px solid $border-color-lighter;
+    margin-bottom: 0;
+    padding-top: 4px;
+  }
 }
 
 body.sidebar {
