set icon-check color green in index

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -203,6 +203,10 @@ tr {
   width: 100%;
 }
 
+.icon-check {
+  color: green;
+}
+
 .pane {
   display: block;
   padding: var(--padding-header) 0 0;
