--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -63,7 +63,7 @@
   .note {
     border-top: 1px solid $border-color-lighter;
     margin-bottom: 0;
-    padding-top: 4px;
+    padding-top: .75rem;
   }
 }
 
