--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -11,6 +11,10 @@
     }
   }
 
+  h3 + label {
+    margin-top: 1rem;
+  }
+
   p + h3 {
     margin-bottom: .25rem;
 
@@ -29,7 +33,7 @@
   }
 
   .details {
-    margin-top: 1.25rem;
+    margin-top: 1rem;
     max-height: 350px;
     overflow: hidden;
     transition: max-height .3s ease-out;
