bug fix for selector

--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -186,7 +186,7 @@
 
 // Earthquake details in map popups and on the SelectBar
 .earthquake {
-  &.dd:not(.mainshock) {
+  &:not(.mainshock) {
     .status {
       display: none;
     }
