tweak font colors

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -40,7 +40,7 @@
         white-space: nowrap;
       }
       > small {
-        color: $text-color-lighter;
+        color: $text-color;
         font-size: .8125rem;
         font-weight: 300;
         letter-spacing: 0.015rem;
