--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -11,7 +11,7 @@
   #updated {
     color: $text-color-darker;
     display: none;
-    padding: .5rem var(--padding-gutter) 1rem;
+    padding: 1rem var(--padding-gutter) 1rem;
 
     &:before {
       @include labels;
