--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -31,7 +31,7 @@ a.impact-bubble:hover {
   }
   &.mmiI {
     background: $mmiI-color;
-    border: 1px solid $border-color-lighter;
+    border: 1px solid $border-color-lighter;  // add border so button shows up
   }
   &.mmiII {
     background: $mmiII-color;
