--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -43,8 +43,8 @@ img {
 #summaryPane {
   #download {
     margin-top: .5rem;
-    padding-bottom: 3px;
-    padding-top: 3px;
+    padding-bottom: .1875rem;
+    padding-top: .1875rem;
 
     &:after {
       content: 'Event Summary';
