add/apply $content-border-radius scss var

--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -6,6 +6,8 @@ $breakpoint-tablet-width: 1023px;
 $button-border-radius: 4px;
 $button-text-shadow: 1px 1px 3px #444;
 
+$content-border-radius: 12px;
+
 $effect-off-duration: .25s;
 $effect-on-duration: .05s;
 
