--- a/src/htdocs/css/_lightbox.scss
+++ b/src/htdocs/css/_lightbox.scss
@@ -36,7 +36,7 @@
   }
 
   img {
-    border-radius: 12px;
+    border-radius: $content-border-radius;
     margin: auto;
     max-height: 100%;
     max-width: 100%;
@@ -44,7 +44,7 @@
 
   .content {
     background: $bg-color;
-    border-radius: 12px;
+    border-radius: $content-border-radius;
     margin: auto;
     max-height: 100%;
     max-width: 100%;
