use ‘standard’ font color

--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -37,7 +37,7 @@
   }
   .aftershocks {
     ul {
-      color: $text-color-darker;
+      color: $text-color;
       font-family: $font-family;
       font-weight: 300;
       letter-spacing: 0.015rem;
