--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -9,6 +9,7 @@ $button-text-shadow: 1px 1px 3px #444;
 $content-border-radius: 12px;
 
 $effect-off-duration: .25s;
+$effect-off-duration-shorter: .15s;
 $effect-on-duration: .05s;
 
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
