--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -31,7 +31,7 @@
       padding: .6rem .85rem;
       text-decoration: none;
       text-transform: uppercase;
-      transition: .15s ease-in;
+      transition: $effect-off-duration-shorter ease-in;
       transition-property: background, border, color;
 
       &:hover {
@@ -65,7 +65,7 @@
         content: '';
         left: 10px;
         position: absolute;
-        transition: border .15s ease-in;
+        transition: border $effect-off-duration-shorter ease-in;
       }
       &:hover:after {
         border-bottom-color: color.scale($accent-color, $lightness: 85%);
