--- a/src/htdocs/css/_searchBar.scss
+++ b/src/htdocs/css/_searchBar.scss
@@ -45,7 +45,7 @@
 
     &.hide {
       opacity: 0;
-      transition: all .15s ease-in;
+      transition: all $effect-off-duration-shorter ease-in;
       visibility: hidden;
     }
   }
