add “notices” from general-header section of feed

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -149,6 +149,11 @@
     }
   }
 
+  .notice {
+    margin-top: .75rem;
+    max-width: none;
+  }
+
   .products {
     align-items: flex-start;
     display: flex;
