set padding instead of margin-bottom for clickability

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -36,7 +36,8 @@
 
     cursor: pointer;
     display: block;
-    margin: 1.25rem 0 .25rem;
+    margin: 1.25rem 0 0;
+    padding-bottom: .25rem;
   }
 
   section.hide {
