use cursor pointer on hover for buttons

--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -44,6 +44,7 @@ a.button {
   &:hover {
     background: $accent-color-lightest;
     border-color: $accent-color;
+    cursor: pointer;
     transition: all $effect-on-duration ease-out;
   }
 
