--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -63,6 +63,14 @@
       padding: 0;
     }
 
+    .date,
+    .depth,
+    .time {
+      span {
+        margin-top: -.125rem;
+      }
+    }
+
     .impact-bubble {
       width: 4.25rem;
 
