--- a/src/htdocs/css/_significantEqs.scss
+++ b/src/htdocs/css/_significantEqs.scss
@@ -1,8 +1,8 @@
 @use 'variables' as *;
 
 #significantEqs {
-  border: solid $border-color;
-  border-width: 1px 0;
+  border-bottom: 1px solid $border-color-lighter;
+  border-top: 1px solid $border-color;
 }
 
 div#significantEqs { // loader
