--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -8,14 +8,19 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
 
 #mapPane,
 #searchBar {
+  .leaflet-center,
+  .leaflet-right {
+    transition: padding $sidebar-toggle-duration ease;
+  }
+
   .leaflet-container {
     font: $font-size $font-family;
   }
 
   .leaflet-control-attribution,
+  .leaflet-control-mouseposition
   .leaflet-control-scale-line {
     font-size: .75rem;
-    line-height: 1;
   }
   .leaflet-control-attribution {
     background: rgba(255, 255, 255, .5);
@@ -24,7 +29,6 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
     overflow: hidden; // quell long attributions
     padding: 2px 4px;
     text-overflow: ellipsis;
-    transition: margin $sidebar-toggle-duration ease;
     white-space: nowrap;
 
     a {
@@ -85,7 +89,6 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
   }
   .leaflet-control-layers {
     font-family: $font-family-headers;
-    transition: margin $sidebar-toggle-duration ease;
 
     label {
       cursor: pointer;
