--- a/src/htdocs/css/leaflet/_index.scss
+++ b/src/htdocs/css/leaflet/_index.scss
@@ -1,3 +1,3 @@
-@use 'node_modules/leaflet-mouse-position/src/L.Control.MousePosition.scss';
+@use 'L.Control.MousePosition'; // located in node_modules/leaflet-mouse-position
 @use 'editable';
 @use 'overrides';
