point to renamed file

--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -1,7 +1,7 @@
-@use 'aftershocks';
 @use 'beachballs';
 @use 'earthquakes';
 @use 'fieldnotes';
+@use 'forecast';
 @use 'mainshock';
 @use 'pager';
 @use 'shakemap-stations';
